--- a/Offline DB in Flutter/pubspec.yaml
+++ b/Offline DB in Flutter/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   path_provider: 2.0.14
   flutter: 
     sdk: flutter
+  fluttertoast: ^8.2.1
 
 dev_dependencies: 
   flutter_lints: 2.0.1
